[project]
name = "codoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gitpython>=3.1.0",
    "openai>=1.0.0",
    "pathspec>=0.11.0",
    "pocketflow>=0.0.1",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
]
